--- a/gleam.cabal
+++ b/gleam.cabal
@@ -45,7 +45,7 @@ Cabal-version:       >=1.2
 
 Executable gleam
   -- .hs or .lhs file containing the Main module.
-  Main-is: gleam.hs
+  Main-is: gleam.lhs
   
   -- Packages needed in order to build this package.
   Build-depends: haskell2010
