--- a/gleam.cabal
+++ b/gleam.cabal
@@ -48,7 +48,7 @@ Executable gleam
   Main-is: gleam.lhs
   
   -- Packages needed in order to build this package.
-  Build-depends: haskell2010, bytestring >= 0.9.1, zlib >= 0.5.3
+  Build-depends: haskell2010, bytestring >= 0.9.1, zlib >= 0.5.3, template-haskell
   
   -- Modules not exported by this package.
   Other-modules: PNG
